[gd_scene load_steps=3 format=3 uid="uid://bocfdtj3ca2t5"]

[ext_resource type="Script" path="res://global.gd" id="1_n5yew"]

[sub_resource type="Environment" id="Environment_wvtoe"]
ambient_light_source = 2
ambient_light_color = Color(1, 1, 1, 1)
ambient_light_energy = 0.5

[node name="Global" type="Node"]
process_mode = 3
script = ExtResource("1_n5yew")

[node name="pause_menu" type="CanvasLayer" parent="."]
visible = false

[node name="Control" type="Control" parent="pause_menu"]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="ColorRect" type="ColorRect" parent="pause_menu/Control"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.329412, 0.329412, 0.329412, 0.764706)

[node name="VBoxContainer" type="VBoxContainer" parent="pause_menu/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="pause_menu/Control/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 150
text = "PAUSE
"
horizontal_alignment = 1

[node name="continue" type="Button" parent="pause_menu/Control/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Continue"

[node name="exit" type="Button" parent="pause_menu/Control/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "exit
"

[node name="game_over_screen" type="CanvasLayer" parent="."]
visible = false

[node name="GameOver" type="Control" parent="game_over_screen"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="game_over_screen/GameOver"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.27451, 0, 0.0352941, 0.443137)

[node name="VBoxContainer" type="VBoxContainer" parent="game_over_screen/GameOver"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="game_over_screen/GameOver/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 150
text = "Game Over
"
horizontal_alignment = 1

[node name="retry" type="Button" parent="game_over_screen/GameOver/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Retry"

[node name="exit" type="Button" parent="game_over_screen/GameOver/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "exit
"

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_wvtoe")

[connection signal="pressed" from="pause_menu/Control/VBoxContainer/continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="pause_menu/Control/VBoxContainer/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="game_over_screen/GameOver/VBoxContainer/retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="game_over_screen/GameOver/VBoxContainer/exit" to="." method="_on_exit_pressed"]
